Fixed bug #71413 (Crash with constants on internal interfaces)